--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,57 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/png">
   <link rel="stylesheet" href="css/fonts.css">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
   <title>Dream Play</title>
 </head>
 <body>
+  <header class="header">
+    <div class="header-wrap container">
+      <div class="logo"><img src="images/header/logo.svg" alt=""></div>
+      <nav class="nav">
+        <ul class="nav-list">
+          <li class="nav-item"><a href="">About Us</a></li>
+          <li class="nav-item"><a href="">Portfolio</a></li>
+          <li class="nav-item"><a href="">Contact Us</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main class="main">
+    <section class="promo">
+      <div class="container">
+
+      </div>
+    </section>
+
+    <section class="who-we-are">
+      <div class="container">
+
+      </div>
+    </section>
+
+    <section class="portfolio">
+      <div class="container">
+
+      </div>
+    </section>
+
+    <section class="contact-us">
+      <div class="container">
+
+      </div>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <div class="container">
+
+    </div>
+  </footer>
   <script src="js/script.js"></script>
 </body>
 </html>
