header, promo, who_we_are/done for desktop

--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,9 @@
       <div class="logo"><img src="images/header/logo.svg" alt=""></div>
       <nav class="nav">
         <ul class="nav-list">
-          <li class="nav-item"><a href="">About Us</a></li>
-          <li class="nav-item"><a href="">Portfolio</a></li>
-          <li class="nav-item"><a href="">Contact Us</a></li>
+          <li class="nav-item"><a href="#about">About Us</a></li>
+          <li class="nav-item"><a href="#portfolio">Portfolio</a></li>
+          <li class="nav-item"><a href="#contact">Contact Us</a></li>
         </ul>
       </nav>
     </div>
@@ -26,13 +26,34 @@
   <main class="main">
     <section class="promo">
       <div class="container">
-
+        <div class="content">
+          <div class="txt-and-btn">
+            <h1 class="title">We Create the best games You Just Can't Stop Playing!</h1>
+            <div class="description">We're not just a company, we're a community of passionate gamers.</div>
+            <button class="btn">See Portfolio<a href=""></a></button>
+          </div>
+          <div class="img"><img src="images/promo/slots-machine.png" alt=""></div>
+        </div>
       </div>
     </section>
 
     <section class="who-we-are">
       <div class="container">
+        <div class="wrap">
+          <h2 class="title">Who we are?</h2>
+          <p class="description"><span>Mechanic Games</span> - Game design studio that specializes in creating video games. We are a team of professionals who work together to develop and produce video/slot games. These professionals may include the best game designers, programmers, artists, and sound designers.</p>
 
+          <div class="list-caption">
+            We offer the following solutions for you business:
+          </div>
+          <ul class="list">
+            <li>Unique Design for the clientOwn preloader for casino/aggregators</li>
+            <li>Own preloader for casino/aggregators</li>
+            <li>Support of Crypto-currency and Social casino mode</li>
+            <li>Support of promotional tools (freebets, tournaments)</li>
+            <li>Integration features (API Validation & Testing Tool, Backoffice Statistics Management)</li>
+          </ul>
+        </div>
       </div>
     </section>
 
